--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "src/github.com/godef"]
-	path = src/github.com/godef
-	url = https://github.com/rogpeppe/godef.git
-[submodule "src/golang/x/tools"]
-	path = src/golang/x/tools
-	url = https://github.com/golang/tools.git
 [submodule "src/github.com/sqs/goreturns"]
 	path = src/github.com/sqs/goreturns
 	url = https://github.com/sqs/goreturns
@@ -16,3 +10,6 @@
 [submodule "src/github.com/ramya-rao-a/go-outline"]
 	path = src/github.com/ramya-rao-a/go-outline
 	url = https://github.com/ramya-rao-a/go-outline.git
+[submodule "src/golang.org/x/tools"]
+	path = src/golang.org/x/tools
+	url = https://github.com/golang/tools.git
